WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102838
[BlackBerry] Animated gifs pause on scroll or zoom and sometimes don't resume after scroll or zoom completes
https://bugs.webkit.org/show_bug.cgi?id=102838
Summary
[BlackBerry] Animated gifs pause on scroll or zoom and sometimes don't resume...
Andrew Lo
Reported
2012-11-20 14:16:14 PST
Animated gifs pause on scroll or zoom and sometimes don't resume after scroll or zoom completes.
Attachments
Patch
(2.89 KB, patch)
2012-11-20 14:26 PST
,
Andrew Lo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Lo
Comment 1
2012-11-20 14:26:09 PST
Created
attachment 175280
[details]
Patch
Rob Buis
Comment 2
2012-11-20 14:40:08 PST
Comment on
attachment 175280
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-11-20 15:34:55 PST
Comment on
attachment 175280
[details]
Patch Clearing flags on attachment: 175280 Committed
r135319
: <
http://trac.webkit.org/changeset/135319
>
WebKit Review Bot
Comment 4
2012-11-20 15:34:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug