[BlackBerry] Animated gifs pause on scroll or zoom and sometimes don't resume after scroll or zoom completes https://bugs.webkit.org/show_bug.cgi?id=102838

Patch by Andrew Lo <anlo@rim.com> on 2012-11-20
Reviewed by Rob Buis.

Internally reviewed by Adam Treat.
Internal PR244646
When entering scrolling & zooming, we suspend regular render jobs
in order to pause animations. When finishing scrolling or zooming,
dispatch a render job in order to resume those animations.

If an animation requests a repaint while the backing store is suspended,
add the regular render job to the render queue so that it can be
processed later.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::repaint):
(BlackBerry::WebKit::BackingStorePrivate::setScrollingOrZooming):

Canonical link: https://commits.webkit.org/120982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135319 268f45cc-cd09-0410-ab3c-d52691b4dbfc